# ChangeLog for Gentoo Linux Installer
# Copyright 2005-2005 Gentoo Technologies, Inc.

# $Header: /var/cvsroot/gentoo/src/installer/ChangeLog,v 1.613 2006/03/06 15:33:42 agaffney Exp $

  7 Mar 2006; Andrew Gaffney <agaffney@gentoo.org>
  src/templates/x86ArchitectureTemplate.py:
  bootloader and partitioning external commands log to compile_output.log

  5 Mar 2006; Preston Cody <codeman@gentoo.org>
  add error catching and text to saving profile dialogs

  4 Mar 2006; Andrew Gaffney <agaffney@gentoo.org>
  src/GLIPortage.py:
  create /tmp, /var/tmp, and /var/lib/portage with proper permissions
  src/templates/x86ArchitectureTemplate.py:
  fix checks for changed partitions so they will actually get deleted

  3 Mar 2006; Andrew Gaffney <agaffney@gentoo.org>
  src/GLIClientController.py:
  slightly better error handling for pre-install failures

  2 Mar 2006; Andrew Gaffney <agaffney@gentoo.org>
  src/templates/x86ArchitectureTemplate.py:
  proper return code checking for ext2/3 resizing

  28 Feb 2006; Andrew Gaffney <agaffney@gentoo.org>
  src/GLIClientController.py:
  accept 'none' as well as 'null' for network type
  src/GLIArchitectureTemplate.py:
  ignore extended partitions in mount_local_partitions()
  src/templates/x86ArchitectureTemplate.py:
  use get_ordered_partition_list() instead of keys().sort() for new_part_list
  check to make sure start sector for primary isn't less than end sector for
  previous extended
  src/GLIClientController.py:
  write dns servers to /etc/resolv.conf

  27 Feb 2006; Andrew Gaffney <agaffney@gentoo.org>
  src/GLIPortage.py:
  copy_pkg_to_chroot() uses compile_output.log for command output

  23 Feb 2006; Andrew Gaffney <agaffney@gentoo.org>
  only keep a 1000 line 'scrollback' buffer for the compile output and log file

  20 Feb 2006; Andrew Gaffney <agaffney@gentoo.org>
  src/GLIPortage.py:
  add code make GLIPortage.py capable of being run stand-along for dynamic
  stage3 generation and copying packages in a GRP-ish way