@@ -1,11 +1,16 @@
 # ChangeLog for Gentoo Linux Installer
 # Copyright 2005-2005 Gentoo Technologies, Inc.
 
-# $Header: /var/cvsroot/gentoo/src/installer/ChangeLog,v 1.613 2006/03/06 15:33:42 agaffney Exp $
+# $Header: /var/cvsroot/gentoo/src/installer/ChangeLog,v 1.614 2006/03/06 21:59:23 agaffney Exp $
 
   7 Mar 2006; Andrew Gaffney <agaffney@gentoo.org>
   src/templates/x86ArchitectureTemplate.py:
   bootloader and partitioning external commands log to compile_output.log
+  wait for device node to exist before resizing
+  add -v to ntfsresize command
+  src/GLIStorageDevice.py:
+  return start/end with ip structure
+  pad min ntfs size by 50 MB just to be safe
 
   5 Mar 2006; Preston Cody <codeman@gentoo.org>
   add error catching and text to saving profile dialogs
